フロント編集１

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,26 +1,7 @@
-  <!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-    <title>ChatSpace.higano</title>
-    <meta name="csrf-param" content="authenticity_token" />
-    <meta name="csrf-token" content="NQkVfd2P6zZ06yfCXHgQWhnGyhuWK/vm0M1ImLTcJKAsl9F2GgDyGEoOw3VTepWwGDl0dPp+49y6J06qLQjLwA==" />
-    <link rel="stylesheet" type="text/css" href="index.css">
-  </head>
-  <body>
-  <div class="content1">
-    <div class="content1-1">
-    </div>
-  </div>
-  <div class="content2">
-  </div>
-  <div class="content3">
-  </div>
-  <div class="content4">
-  </div>
-  <div class="content5">
-  </div>
+.wrapper
+  = render "side_bar"
+  = render "main_chat"
 
-  <div c>
-  </body>
-</html>
+
+
+ 
