フロント編集２

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -22,7 +22,7 @@
       .main__footer__post-image
         %label{class: "input-box__image"}
           %i.fa.fa-image
-          %input{class:"file-select",type: "file"}
+          %input{class:"selectmark",type: "file"}
       .main__footer__send
         send
             
