--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -86,6 +86,9 @@
       display: flex;
       justify-content: space-between;
       border-bottom: solid 1px #eee;
+      .edit{
+        text-decoration: none;
+      }
       &__post-name {
         margin-top: 35px;
       }
@@ -97,6 +100,8 @@
         &__post-member-name {
           font-size: 12px;
           color: #999999;
+            
+          
         }
         
         &__Edit{
@@ -111,11 +116,8 @@
           text-align: center;
           line-height: 40px;
           padding: 10px 20px;
-          text-decoration: none;
         }
-        // .main__main-header__edit{
-        //   text-decoration: none;
-        // }
+        
 
     }
 
@@ -190,9 +192,9 @@
             background-color:white;
             display: inline;
             padding-right: 0px; 
-              .file-select{
-                display: none;
-              }
+            .selectmark{
+              display: none;
+            }
           }
             &__send{
               height: 50px;
@@ -206,6 +208,7 @@
               color: white;
               text-align: center;
               line-height: 50px;
+              
             }
         
     }
