--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -35,7 +35,7 @@
       &__side-box{
         width: 260px;
         height: 20px;
-        background-color:#253141;;
+        background-color:#253141;
         &__p{
           font-size: 16px;
         }
@@ -73,15 +73,13 @@
   .main{
     display: flex;
     flex-direction: column;
-    position: fixed;
+    position: relative;
     
   &__header {
       width: calc( 100vw - 300px );
       height: 100px;
       background-color: #ffffff;
-      position: fixed;
-      right: 0px;
-      top: 0px;
+      position: absolute;
       padding: 0 40px;
       display: flex;
       justify-content: space-between;
