--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,14 +2,12 @@
 .side
   .side__side-header
     .side__side-header__side-box
-      %p masa 
-      
+      = current_user.name
     .side__side-header__side-icon
+      = link_to edit_user_path(current_user) do
+        = icon('fas', 'cog')
       = link_to "#", class: "icon1" do
         %i.fa.fa-edit
-       
-      = link_to "#", class: "icon2" do
-        %i.fa.fa-cog
 
   .side__side-contents
     .side__side-contents__groups
