--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -6,12 +6,14 @@
     .side__side-header__side-icon
       = link_to edit_user_path(current_user) do
         = icon('fas', 'cog')
-      = link_to "#", class: "icon1" do
+      = link_to new_group_path, class: "icon1" do
         %i.fa.fa-edit
 
   .side__side-contents
-    .side__side-contents__groups
-      .side__side-contents__group-name
-        %p tech camp
-      .side__side-contents__group-message
-        %p まだメッセージがありません
+    - current_user.groups.each do |group|
+      .side__side-contents__groups
+        = link_to group_messages_path(group) do
+          .side__side-contents__group-name
+            = group.name
+          .side__side-contents__group-message
+            %p まだメッセージがありません
