--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -10,8 +10,9 @@
 }
 .wrapper {
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
   display: flex;
+  // position: relative;
 
   
   .side {
@@ -24,7 +25,6 @@
       height: 100px;
       width: 100%;
       background-color: #253141;
-      display: flex;
       padding: 20px;
       display: flex;
       justify-content: space-between;
@@ -49,7 +49,7 @@
       height: calc(100% - 100px);
       background-color: #2f3e51;
       padding: 20px;
-      
+      overflow: scroll;
 
         &__groups{
           height: 100px;
@@ -71,18 +71,19 @@
       color: white;
     }
   }
-
+  .link{
+    text-decoration: none;
+  }
     
   .main{
-    display: flex;
-    flex-direction: column;
-    position: relative;
+    // display: flex;
+    // flex-direction: column;
     
   &__header {
       width: calc( 100vw - 300px );
       height: 100px;
       background-color: #ffffff;
-      position: absolute;
+      // position: absolute;
       padding: 0 40px;
       display: flex;
       justify-content: space-between;
@@ -118,27 +119,24 @@
           line-height: 40px;
           padding: 10px 20px;
         }
-        
-
     }
 
   &__contents {
-    width: calc(  100vw - 300px ) ;
+    overflow: scroll;
+    width: calc( 100vw - 300px );
     height: calc( 100vh - 190px);
     background-color: #fafafa;
-    position: fixed;
-      right: 0px;
-      top: 100px;
     &__message-date{
       padding-bottom: 40px;
-      display: flex;
+      
       &__message-tolker{
         color: #434a54;
-        font-size: 16px;
+        font-size: 18px;
         font-weight: bold;
         display: inline;
         margin-top: 10px;
         margin-left: 40px;
+
       }
         &__message-info{
           display: inline;
@@ -146,12 +144,13 @@
           margin-top: 10px;
           margin-left: 10px;
           color: #999999;
-          font-size: 11px;
+          font-size: 13px;
         }
         &__message-date{
-          font-size: 12px;
+          font-size: 14px;
           margin-top: 10px;
-          
+          margin-left: 40px;
+          padding-bottom: 40px;
         }
       }
         
@@ -162,9 +161,9 @@
       width: calc( 1140px) ;
       height: 90px;
       background-color: #d2d2d2;
-      position: fixed;
-      right: 0;
-      bottom: 0;
+      // position: fixed;
+      // right: 0;
+      // bottom: 0;
       padding: 0 40px;
         &__post-form{
           height: 100%;
@@ -182,17 +181,18 @@
             color: #434a54;
             background-color: white;
             display: inline;
+            padding-left: 20px;
           }
           &__post-image{
-            height: 50px;
-            width: 50px;
-            font-size: 1.3rem;
+            // height: 50px;
+            // width: 50px;
+            font-size: 1.5rem;
             position: absolute;
-            right: 60px;
-            top: 20px;
-            background-color:white;
+            right: 70px;
+            top: 30px;
+            // background-color:white;
             display: inline;
-            padding-right: 0px; 
+            padding-right: 0px;
             .selectmark{
               display: none;
             }
