--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -11,7 +11,7 @@
       %label.chat-group-form__label{:for => "グループ名"} グループ名
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
-        %input#group-search-field.chat-group-form__input{:placeholder => "グループ名を入力してください", :type => "text"}/
+        = f.text_field :name, class: 'chat__group_name chat-group-form__input', placeholder: 'グループ名を入力してください'
   .chat-group-form__field
     .chat-group-form__field--left
       %label.chat-group-form__label{:for => "chat_group_チャットメンバーを追加"} チャットメンバーを追加
