--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -18,12 +18,10 @@
   .side {
     width: 300px;
     height: 100vh;
-    flex-direction: column; 
-    
 
     &__side-header {
       height: 100px;
-      width: 100%;
+      width: 300px;
       background-color: #253141;
       padding: 20px;
       display: flex;
@@ -156,7 +154,7 @@
   
 
   &__footer{
-      width: calc( 1140px) ;
+      width: 100%;
       height: 90px;
       background-color: #d2d2d2;
       padding: 0 40px;
