--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -170,30 +170,30 @@
             position: absolute;
             top: 20px;
             height: 50px;
-            width: 1000px;
+            width: calc( 100% - 100px);
             color: #434a54;
             background-color: white;
             display: inline;
             padding-left: 20px;
           }
-            &__send{
-              height: 50px;
-              width: 80px;
-              background-color: #38aef0;
-              display: inline;
-              position: absolute;
-              right: -30px;
-              top: 20px;
-              margin-left: 15px;
-              color: white;
-              text-align: center;
-              line-height: 50px;
-              
-            }
+          &__send{
+            height: 50px;
+            width: 80px;
+            background-color: #38aef0;
+            display: inline;
+            position: absolute;
+            right: 0px;
+            top: 20px;
+            margin-left: 15px;
+            color: white;
+            text-align: center;
+            line-height: 50px;
+            
+          }
           &__post-image{
             font-size: 1.5rem;
             position: absolute;
-            right: 70px;
+            right: 120px;
             top: 30px;
             display: inline;
             padding-right: 0px;
